some changes in pectrue 1 and 2

--- a/notebook/lecture2/lecture2_PIMA.ipynb
+++ b/notebook/lecture2/lecture2_PIMA.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "animal-release",
    "metadata": {},
    "outputs": [
@@ -149,17 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "scientific-desktop",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x119be2550>"
+       "<matplotlib.image.AxesImage at 0x123577e20>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "serious-binding",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "subtle-acquisition",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "vanilla-leader",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "dated-richards",
    "metadata": {},
    "outputs": [],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "italian-envelope",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        " 'flag')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,17 +384,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "lucky-valve",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11b2140d0>]"
+       "[<matplotlib.lines.Line2D at 0x1260c2fa0>]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "id": "historic-galaxy",
    "metadata": {},
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "id": "improved-rates",
    "metadata": {},
    "outputs": [
@@ -538,13 +538,193 @@
    "id": "opening-standard",
    "metadata": {},
    "source": [
-    "Now we want to know how much flux of the Supernova was detected by our detector. How we do that? We cn make a loop on the objects we found on the image and find the closer to this pixels"
+    "Now we want to know how much flux of the Supernova was detected by our detector. How we do that? We cn make a loop on the objects we found on the image and find the closer to this pixels. let's do this in steps:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "chronic-consolidation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "444.23769202628586 25.627800496614693\n",
+      "67.7338378276479 45.94703378600119\n",
+      "605.6248728506777 44.53884771922165\n",
+      "564.535792700472 73.16151329111406\n",
+      "280.0537660738645 71.7386877535555\n",
+      "984.3803196631952 95.43452997978416\n",
+      "916.8240527195229 128.41861054552638\n",
+      "793.9276200652265 164.87834418698264\n",
+      "187.88912811716298 178.63500091094787\n",
+      "303.5481260074333 180.63237256596858\n",
+      "1003.2145104587855 255.33507002879918\n",
+      "810.4105013945323 273.6086295014369\n",
+      "288.49178716786156 289.97325246843513\n",
+      "905.4106068324969 290.3182995877771\n",
+      "974.4200469894565 301.62117747534745\n",
+      "435.55323120271777 312.6322809959689\n",
+      "241.18254330663018 370.6551872204759\n",
+      "982.4783139833193 384.5818764855295\n",
+      "863.4916324354894 404.9987718494879\n",
+      "750.777405433245 462.18292082617273\n",
+      "63.42823032667765 482.2573196521705\n",
+      "748.5832426407648 489.4464565910816\n",
+      "725.8887091028982 493.07251020108356\n",
+      "879.5054501377489 517.8480739717493\n",
+      "734.4746837875128 522.9160967131473\n",
+      "595.1660801286199 525.1197098930635\n",
+      "906.8655598238239 558.1752250062441\n",
+      "697.4909612846926 563.4689301562266\n",
+      "399.92909139470805 575.7366904766614\n",
+      "1.8465606958383114 588.7103550552775\n",
+      "460.30879597134077 595.5429077541584\n",
+      "628.4471071502677 565.4700914701359\n",
+      "753.8164096739896 608.6390166187938\n",
+      "586.9177460074898 617.0924114361604\n",
+      "210.2802145273594 622.9763326358241\n",
+      "650.6820047374462 656.6585305368758\n",
+      "220.90587833609888 662.4132368140184\n",
+      "498.53488740290976 677.8761498959644\n",
+      "833.0570613947326 711.2891530689551\n",
+      "718.7196159726312 752.261355408219\n",
+      "169.92542308299033 761.713533343047\n",
+      "968.3750710074063 778.8254959014648\n",
+      "610.0990721706914 786.4525192719032\n",
+      "453.46577317235045 792.1293788027475\n",
+      "990.6417895593775 804.9081590861033\n",
+      "260.19300281191096 838.3621388566321\n",
+      "473.01250779952903 866.1959871211918\n",
+      "1.0628170682590845 950.8075362334517\n",
+      "1015.3992321425844 982.3738682829832\n",
+      "360.6311791531567 988.6132809688163\n",
+      "435.3500829161618 994.3260995414864\n",
+      "652.206782518356 1019.0463026994089\n"
+     ]
+    }
+   ],
+   "source": [
+    "#let's loop over the stars \n",
+    "# we will use for and \"enumerate\"\n",
+    "for i,j in enumerate(objects['x']):\n",
+    "    print(objects['x'][i],objects['y'][i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "broad-butter",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "606218.811814135 0 444.23769202628586\n",
+      "843527.8481868962 1 67.7338378276479\n",
+      "549834.8819494349 2 605.6248728506777\n",
+      "510388.84200081707 3 564.535792700472\n",
+      "620140.2866683039 4 280.0537660738645\n",
+      "615860.7154908418 5 984.3803196631952\n",
+      "525591.4491374915 6 916.8240527195229\n",
+      "419055.846142043 7 793.9276200652265\n",
+      "548470.5757165931 8 187.88912811716298\n",
+      "461407.9747808731 9 303.5481260074333\n",
+      "434973.82292945846 10 1003.2145104587855\n",
+      "302085.12784636 11 810.4105013945323\n",
+      "350479.13981862355 12 288.49178716786156\n",
+      "332034.50344298105 13 905.4106068324969\n",
+      "366267.0371471671 14 974.4200469894565\n",
+      "255099.38350877556 15 435.55323120271777\n",
+      "309756.5272692411 16 241.18254330663018\n",
+      "298688.838501308 17 982.4783139833193\n",
+      "208617.4286756874 18 863.4916324354894\n",
+      "124236.45702733232 19 750.777405433245\n",
+      "392790.9913583734 20 63.42823032667765\n",
+      "106715.85927504052 21 748.5832426407648\n",
+      "98876.73915315307 22 725.8887091028982\n",
+      "143678.9370955655 23 879.5054501377489\n",
+      "84317.87242682924 24 734.4746837875128\n",
+      "68341.40762653315 25 595.1660801286199\n",
+      "139082.9165115908 26 906.8655598238239\n",
+      "56903.6944890372 27 697.4909612846926\n",
+      "89034.62309039972 28 399.92909139470805\n",
+      "410759.44156613335 29 1.8465606958383114\n",
+      "59178.64828294334 30 460.30879597134077\n",
+      "48926.6882299012 31 628.4471071502677\n",
+      "51684.124598782306 32 753.8164096739896\n",
+      "29147.921814350702 33 586.9177460074898\n",
+      "187660.15934479152 34 210.2802145273594\n",
+      "18260.811339845048 35 650.6820047374462\n",
+      "167939.14970558003 36 220.90587833609888\n",
+      "24484.65091494048 37 498.53488740290976\n",
+      "54618.2750209408 38 833.0570613947326\n",
+      "12609.573722152069 39 718.7196159726312\n",
+      "195687.56985428918 40 169.92542308299033\n",
+      "127323.95476952709 41 968.3750710074063\n",
+      "2.5062856301367797 42 610.0990721706914\n",
+      "2.5062856301367797 42 610.0990721706914\n",
+      "25050.94663451942 43 453.46577317235045\n",
+      "144012.00384846117 44 990.6417895593775\n",
+      "126242.30984046891 45 260.19300281191096\n",
+      "25640.516959390185 46 473.01250779952903\n",
+      "399937.45866391965 47 1.0628170682590845\n",
+      "201588.9906027673 48 1015.3992321425844\n",
+      "104039.59617245503 49 360.6311791531567\n",
+      "74462.2242839922 50 435.3500829161618\n",
+      "55946.86569709356 51 652.206782518356\n"
+     ]
+    }
+   ],
+   "source": [
+    "#let's loop over the stars \n",
+    "# we will use for and \"enumerate\"\n",
+    "# let's now make the difference between each pixel of an object and px py\n",
+    "for i,j in enumerate(objects['x']):\n",
+    "    print((objects['x'][i]-px)**2+(objects['y'][i]-py)**2,i,j)\n",
+    "    if (objects['x'][i]-px)**2+(objects['y'][i]-py)**2 < 10:\n",
+    "       print((objects['x'][i]-px)**2+(objects['y'][i]-py)**2,i,j)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "representative-snake",
+   "metadata": {},
+   "source": [
+    "What do you see? is there one object['x'] element that is very close in pixel to px? and the same for  object['y'] and py?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "informal-graham",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5062856301367797 42 610.0990721706914\n"
+     ]
+    }
+   ],
+   "source": [
+    "#let's loop over the stars \n",
+    "# we will use for and \"enumerate\"\n",
+    "# let's now make the difference between each pixel of an object and px py\n",
+    "# let add an iff statment in the loop to select only the element we want \n",
+    "for i,j in enumerate(objects['x']):\n",
+    "    if (objects['x'][i]-px)**2+(objects['y'][i]-py)**2 < 10:\n",
+    "       print(((objects['x'][i]-px)**2+(objects['y'][i]-py)**2),i,j)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "broad-butter",
+   "id": "buried-incidence",
    "metadata": {},
    "outputs": [],
    "source": []
