--- a/notebook/lecture1/PIMA_lecture1.ipynb
+++ b/notebook/lecture1/PIMA_lecture1.ipynb
@@ -23,6 +23,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weight_kg = 60 \n",
+    "element = 'oxygen' \n",
+    "print(weight_kg)\n",
+    "odds = [1,3,5,7] \n",
+    "type(weight_kg)\n",
+    "type(element)\n",
+    "type(odds)\n",
+    "3+5 "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,6 +75,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1.6666666666666667\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(5//3)\n",
+    "print(5/3)\n",
+    "print(5%3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -55,6 +110,27 @@
     " <br> <font color='blue'> from the third entry on of list odds using slice </font>\n",
     " <br> <font color='blue'> every second entry of the list odds using slice </font>\n",
     "  <br> <font color='blue'> list odds in reverse order using slice </font>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odds = [1,3,5,7] \n",
+    "odds[-1]"
    ]
   },
   {
