--- a/notebook/notes/notes.tex
+++ b/notebook/notes/notes.tex
@@ -52,7 +52,7 @@ These are the notes for the PIMA school 2021.
 
 
 
-\chapter{Introduction}
+\chapter{lecture 0}
 
 \section{Introcuction to Shell terminal}
 The shell is a program where users can type commands. With the shell, it’s possible to invoke complicated programs like climate modeling software or simple commands that create an empty directory with only one line of code. The most popular Unix shell is Bash (the Bourne Again SHell — so-called because it’s derived from a shell written by Stephen Bourne). Bash is the default shell on most modern implementations of Unix and in most packages that provide Unix-like tools for Windows.
@@ -200,9 +200,37 @@ Here we report some short command for notebook:
 \item Close browser window and type ctl+c twice in command line : Exit
 \end{itemize}
 
-\chapter{lecture 2}
-In order to run lecture 2 we need to donwload a notebook from here:
+\chapter{Lecture 1}
+\section{Introcuction to scipy, numpy and definition}
+Introduction to arrays, variable, string, list, loop and function.
+Use the material in the notebook: \\
+$http://localhost:8888/notebooks/lecture1/PIMA_lecture1.ipynb$ \\
 
+and extra material form scipy lecture.\\
+Plot a spectrum at the end of the lecture, More on plotting in the next lecture.
+
+\chapter{Lecture 2}
+\section{Plot and histograms}
+
+
+
+\chapter{Lecture 3}
+\section{fits images, plot the image, identify object, wcs}
+
+
+
+\chapter{Lecture 4}
+\section{Magnitudes, flux,measure flux,  distance modulus, convert to magnitude calibrate photometry}
+
+
+\chapter{Lecture 5}
+\section{Discover a planet planets}
+
+\chapter{Lecture 6}
+\section{Measure the distance of a Supernova}
+
+\chapter{Lecture 7}
+\section{Color image}
 
 %\begin{equation}
 %dm(r,t) = 4 \pi r^{2} \rho dr - 4 \pi r^{2} \rho v dt 
