add spectrum in lecture 2

--- a/notebook/lecture2/lecture2_PIMA.ipynb
+++ b/notebook/lecture2/lecture2_PIMA.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Importing Matplotlib's pylab"
+    "# Matplotlib and magic functions\n",
+    "Matplotlib is the most widely used scientific plotting package in Python.Import it by typing <font color='blue'>import matplotlib  </font> in your notebook. Use help to learn about the contents of a library module. You can import specific items from a library module to shorten programs. One can use <font color='blue'>from ... import ...   </font> to load only specific items from a library module. Then refer to them directly without\n",
+    "library name as prefix. jupyter Import library module pyplot in your notebook.\n",
+    "You can create an alias for a library module when importing it to shorten programs. One can use import ... as ... to create an alias.Create alias plt for library module pyplot in your\n",
+    "notebook.<br>\n",
+    "One can also use IPython magic function, but note it is only valid within the notebook envi- ronment. The % indicates an IPython magic function. You only have to execute this function once per notebook. For example if you’re using a Jupyter notebook, you’ll need to execute the command <font color='blue'>%matplotlib inline   </font> in order for your matplotlib images to appear in the notebook as cell output (inline) when show() is called. Normally you would put this at the very beginning of the notebook. Execute this command in your notebook."
    ]
   },
   {
@@ -19,6 +24,36 @@
     "\n",
     "# Should plots pop up as you type? Use interactive on/off plt.ion() or plt.ioff()\n",
     "plt.ion()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.genfromtxt('solar_spectrum_3.txt')\n",
+    "# the data format is an array of arrays. each element of the array is a\n",
+    "# 2 dimensions array with one wavelength and one flux value.\n",
+    "# [[wave1  flux1], [wave2, flux2] .....]\n",
+    "print(data[0:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot( xx, yy, '-',color='r', label='Sun Spectrum')\n",
+    "# add label in x axis\n",
+    "plt.xlabel('nm')\n",
+    "# add label in y axis\n",
+    "plt.ylabel('W m^2 nm')\n",
+    "plt.title('The SUN spectrum!')\n",
+    "plt.xlim(400,2500)\n",
+    "plt.ylim(-.1,1.5)\n",
+    "plt.legend(loc=1,ncol=1,numpoints=1)"
    ]
   },
   {
