--- a/notebook/lecture1/PIMA_lecture1.ipynb
+++ b/notebook/lecture1/PIMA_lecture1.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "NOTE FOR THE INSTRUCTOR:\n",
+    "most important are 1D array, 2D arrays, loop, functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Variables and functions\n",
     "<br> <font color='red'> Variables </font> <br>\n",
     "Use variables to store values. Python is case-sensitive. Any Python interpreter can be used as a calculator.  <font color='blue'>Use it to calculate 3 + 5 ∗ 4</font>.\n",
