--- a/notebook/lecture1/PIMA_lecture1.ipynb
+++ b/notebook/lecture1/PIMA_lecture1.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "NOTE FOR THE INSTRUCTOR:\n",
-    "most important are 1D array, 2D arrays, loop, functions"
+    "most important are import packages, 1D array, 2D arrays, loop, functions, dictionary"
    ]
   },
   {
@@ -213,8 +213,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astropy import units as u\n",
-    "from astropy.modeling.blackbody import blackbody_lambda, blackbody_nu"
+    "from astropy import wcs\n",
+    "import sep"
    ]
   },
   {
