--- a/notebook/lecture2/lecture2_PIMA.ipynb
+++ b/notebook/lecture2/lecture2_PIMA.ipynb
@@ -630,6 +630,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -649,6 +663,13 @@
     "h, bins = np.histogram(x, bins=20)\n",
     "ax.plot(bins[1:], h, linestyle='steps-pre')\n",
     "plt.draw()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lecture finish here"
    ]
   },
   {
