--- a/notebook/notes/notes.tex
+++ b/notebook/notes/notes.tex
@@ -52,18 +52,18 @@ These are the notes for the PIMA school 2021.
 
 
 
-\chapter{lecture 0}
+\chapter{Lecture 0}
 
-\section{Introcuction to Shell terminal}
+\section{Introduction to Shell terminal}
 The shell is a program where users can type commands. With the shell, it‚Äôs possible to invoke complicated programs like climate modeling software or simple commands that create an empty directory with only one line of code. The most popular Unix shell is Bash (the Bourne Again SHell ‚Äî so-called because it‚Äôs derived from a shell written by Stephen Bourne). Bash is the default shell on most modern implementations of Unix and in most packages that provide Unix-like tools for Windows.
 
-Using the shell will take some effort and some time to learn. While a GUI presents you with choices to select, CLI choices are not automatically presented to you, so you must learn a few commands like new vocabulary in a language you‚Äôre studying. However, unlike a spoken language, a small number of ‚Äúwords‚Äù (i.e. commands) gets you a long way, and we‚Äôll cover those essential few today.
+Using the shell will take some effort and some time to learn. While a GUI presents you with choices to select, the command line does not. You must learn a few commands just like new vocabulary words in a language you'Äôre studying. However, unlike a spoken language, a small number of `words'Äù (i.e. commands) gets you a long way, and we will cover those essential few today.
 
-The grammar of a shell allows you to combine existing tools into powerful pipelines and handle large volumes of data automatically. Sequences of commands can be written into a script, improving the reproducibility of workflows.
+The grammar of a shell allows you to combine existing tools into powerful pipelines and handle large volumes of data automatically. Sequences of commands can be written into a script, or a sequence of commands that can be run all at once, improving the reproducibility of workflows.
 
 In addition, the command line is often the easiest way to interact with remote machines and supercomputers. Familiarity with the shell is near essential to run a variety of specialized tools and resources including high-performance computing systems. As clusters and cloud computing systems become more popular for scientific data crunching, being able to interact with the shell is becoming a necessary skill. We can build on the command-line skills covered here to tackle a wide range of scientific questions and computational challenges.
 
-Let‚Äôs get started.
+Let'Äôs get started.
 
 When the shell is first opened, you are presented with a \emph{prompt}, indicating that the shell is waiting for input.
 
@@ -76,7 +76,7 @@ The shell typically uses \$ as the prompt, but may use a different symbol. In th
 
 The prompt is followed by a text cursor, a character that indicates the position where your typing will appear. The cursor is usually a flashing or solid block, but it can also be an underscore or a pipe. You may have seen it in a text editor program, for example.
 
-So let‚Äôs try our first command, ls which is short for listing. This command will list the contents of the current directory:
+So let's try our first command, `ls' is short for listing. This command will list the contents of the current directory.
 
 \begin{figure}[!]
 \includegraphics[scale=.6]{figures/ls.png}
@@ -85,19 +85,19 @@ So let‚Äôs try our first command, ls which is short for listing. This command wi
 
 
 
-The part of the operating system responsible for managing files and directories is called the file system. It organizes our data into files, which hold information, and directories (also called ‚Äòfolders‚Äô), which hold files or other directories.
+The part of the operating system responsible for managing files and directories is called the file system. It organizes our data into files, which hold information, and directories (also called `Äòfolders'Äô), which hold files or other directories.
 
-Several commands are frequently used to create, inspect, rename, and delete files and directories. To start exploring them, we‚Äôll go to our open shell window.
+Several commands are frequently used to create, inspect, rename, and delete files and directories. To start exploring them, we wilÄôll go to our open shell window.
 
-First let‚Äôs find out where we are by running a command called \emph{pwd} (which stands for ‚Äòprint working directory‚Äô). Directories are like places - at any time while we are using the shell we are in exactly one place, called our current working directory. Commands mostly read and write files in the current working directory, i.e. ‚Äòhere‚Äô, so knowing where you are before running a command is important. pwd shows you where you are:
+First let's find out where we are by running a command called \emph{pwd} (which stands for `print working directory'Äô). Directories are like places - at any time while we are using the shell we are in exactly one place, called our current working directory. Commands mostly read and write files in the current working directory, i.e. `Äòhere'Äô, so knowing where you are before running a command is important. pwd shows you where you are.
 
 \begin{figure}[!]
 \includegraphics[scale=.6]{figures/pwd.png}
 \caption{pwd command}
 \end{figure}
 
-Here, the computer‚Äôs response is \emph{/Users/nelle}, which is Nelle‚Äôs home directory:
-The home directory path will look different on different operating systems. On Linux it may look like /home/nelle, and on Windows it will be similar to C:\slash Documents and Settings\slash nelle or C:\slash Users \slash nelle. (Note that it may look slightly different for different versions of Windows.) In future examples, we‚Äôve used Mac output as the default - Linux and Windows output may differ slightly, but should be generally similar.
+Here, the computer'Äôs response is \emph{/Users/nelle}, which is Nelle'Äôs home directory.
+The home directory path will look different on different operating systems. On Linux it may look like /home/nelle, and on Windows it will be similar to C:\slash Documents and Settings\slash nelle or C:\slash Users \slash nelle. (Note that it may look slightly different for different versions of Windows.) In future examples, we will use Mac output as the default - Linux and Windows output may differ slightly, but should be generally similar.
 
 We will also assume that your pwd command returns your users home directory. If pwd returns something different you may need to navigate there using \emph{cd} or some commands in this lesson will not work as written. 
 See Exploring Other Directories for more details on the cd command.
@@ -114,7 +114,7 @@ See Exploring Other Directories for more details on the cd command.
 \end{figure}
 
 
-Let‚Äôs create a new directory called \emph{pimaschool} using the command (which has no output):
+Let's create a new directory called \emph{pima} using the command (which has no output):
 \begin{lstlisting}[language=bash]
 mkdir pima 
 \end{lstlisting}
@@ -134,7 +134,9 @@ If prompted, you should choose to:\\
 1)  Accept the license / terms of use.\\
 2)  Install for just the current user, not all users.\\
 Once installed, check that you can run the "Anaconda Prompt".  \\
-From the prompt, run the command:conda --version\\
+From the prompt, run the command: \\
+
+\noindent conda --version\\
 
 Video to install miniconda on Windows \\
 https://www.youtube.com/watch?v=tXgPY4lc6fo \\
