--- a/notebook/lecture4/lecture4_PIMA.ipynb
+++ b/notebook/lecture4/lecture4_PIMA.ipynb
@@ -612,6 +612,11 @@
     }
    ],
    "source": [
+    "# if you have time \n",
+    "# ask students to figured out the formula of the distance \n",
+    "# if you do not have time explan that his is just \n",
+    "#  Pythagoras's theorem    \n",
+    "    \n",
     "#let's loop over the stars \n",
     "# we will use for and \"enumerate\"\n",
     "# let's now make the difference between each pixel of an object and px py\n",
@@ -650,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
