--- a/notebook/lecture7/supernova.ipynb
+++ b/notebook/lecture7/supernova.ipynb
@@ -13,6 +13,10 @@
    "id": "altered-recommendation",
    "metadata": {},
    "source": [
+    "Data for this lecture should be downloaded from here and \"untarred\":<br>\n",
+    "https://www.dropbox.com/s/l06w0afjz83974m/NGC3923.tar.gz?dl=0 <br>\n",
+    "\n",
+    "\n",
     "let's start using the magic function we learned last time \"%pylab inline\"\n",
     "<br> then we can import the packeages we will use today: sep, astropy  \n",
     "<br> from astropy we will import: fits and wcs"
@@ -47,7 +51,7 @@
    "metadata": {},
    "source": [
     "# read an image\n",
-    "B-median.fits is our test image. we will use fits.open to open and put the image in a variable img\n",
+    "Let's open the first image. we will use fits.open to open and put the image in a variable img\n",
     "<br> let's see the image format. Fits mean \"Flexible Image Transport System\" \n",
     "<br> this is a specific format composed by a metadata part and a data part.\n",
     "The metadata (header) include all the info about the image and the data part is usually a bidimensional array. A fits image can have multiple layers of metadata and data.\n",
@@ -65,14 +69,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#img = fits.open('B-median.fits')\n",
-    "imglist=glob.glob('NGC*fits')\n",
+    "imglist=glob.glob('*fits')\n",
     "SN_RA = 177.757464 \n",
     "SN_DEC = -28.743997\n",
     "STD_RA = 177.7401436\n",
     "STD_DEC = -28.7764212\n",
-    "std_mag = 15.585 #  16.048\n",
-    "#hdu = fits.open('NGC3923_2018-03-31.86.fits')"
+    "std_mag = 15.585 #  16.048"
    ]
   },
   {
@@ -80,8 +82,17 @@
    "execution_count": 3,
    "id": "multiple-dodge",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['NGC3923_2018-05-15.03.fits', 'NGC3923_2018-04-02.14.fits', 'NGC3923_2018-05-17.69.fits', 'NGC3923_2018-04-15.1.fits', 'NGC3923_2018-04-25.74.fits', 'NGC3923_2018-04-14.11.fits', 'NGC3923_2018-05-13.71.fits', 'NGC3923_2018-04-03.35.fits', 'NGC3923_2018-04-09.29.fits', 'NGC3923_2018-05-19.7.fits', 'NGC3923_2018-05-17.24.fits', 'NGC3923_2018-05-27.0.fits', 'NGC3923_2018-04-20.57.fits', 'NGC3923_2018-06-02.68.fits', 'NGC3923_2018-05-25.0.fits', 'NGC3923_2018-04-14.8.fits', 'NGC3923_2018-05-20.69.fits', 'NGC3923_2018-05-30.69.fits', 'NGC3923_2018-04-18.33.fits', 'NGC3923_2018-06-04.98.fits', 'NGC3923_2018-04-04.51.fits', 'NGC3923_2018-04-10.12.fits', 'NGC3923_2018-04-21.1.fits', 'NGC3923_2018-04-08.02.fits', 'NGC3923_2018-05-07.75.fits', 'NGC3923_2018-05-21.02.fits', 'NGC3923_2018-04-29.71.fits', 'NGC3923_2018-05-06.74.fits', 'NGC3923_2018-05-24.01.fits', 'NGC3923_2018-04-05.61.fits', 'NGC3923_2018-04-27.55.fits', 'NGC3923_2018-04-01.14.fits', 'NGC3923_2018-05-22.49.fits', 'NGC3923_2018-04-17.11.fits', 'NGC3923_2018-04-29.06.fits', 'NGC3923_2018-04-22.3.fits', 'NGC3923_2018-04-09.6.fits', 'NGC3923_2018-05-14.52.fits', 'NGC3923_2018-04-01.78.fits', 'NGC3923_2018-04-13.12.fits', 'NGC3923_2018-05-21.62.fits', 'NGC3923_2018-06-07.98.fits', 'NGC3923_2018-04-11.81.fits', 'NGC3923_2018-05-16.02.fits', 'NGC3923_2018-04-28.06.fits', 'NGC3923_2018-04-16.11.fits', 'NGC3923_2018-04-02.52.fits', 'NGC3923_2018-04-02.33.fits', 'NGC3923_2018-04-30.07.fits', 'NGC3923_2018-04-18.78.fits', 'NGC3923_2018-04-25.28.fits', 'NGC3923_2018-04-23.56.fits', 'NGC3923_2018-05-20.02.fits', 'NGC3923_2018-05-23.69.fits', 'NGC3923_2018-06-07.16.fits', 'NGC3923_2018-05-09.53.fits', 'NGC3923_2018-06-01.47.fits', 'NGC3923_2018-04-09.56.fits', 'NGC3923_2018-04-12.26.fits', 'NGC3923_2018-05-18.72.fits', 'NGC3923_2018-05-18.25.fits', 'NGC3923_2018-05-04.06.fits', 'NGC3923_2018-05-10.53.fits', 'NGC3923_2018-04-08.0.fits', 'NGC3923_2018-03-31.14.fits', 'NGC3923_2018-06-02.98.fits', 'NGC3923_2018-05-05.06.fits', 'NGC3923_2018-05-11.04.fits', 'NGC3923_2018-04-09.98.fits', 'NGC3923_2018-05-13.03.fits', 'NGC3923_2018-06-08.66.fits', 'NGC3923_2018-06-04.12.fits', 'NGC3923_2018-06-09.1.fits', 'NGC3923_2018-04-15.74.fits', 'NGC3923_2018-05-08.7.fits', 'NGC3923_2018-04-04.13.fits', 'NGC3923_2018-04-03.17.fits', 'NGC3923_2018-03-31.86.fits', 'NGC3923_2018-04-23.08.fits', 'NGC3923_2018-04-08.26.fits', 'NGC3923_2018-04-16.6.fits', 'NGC3923_2018-04-06.14.fits', 'NGC3923_2018-04-19.27.fits', 'NGC3923_2018-05-23.01.fits', 'NGC3923_2018-05-27.2.fits', 'NGC3923_2018-05-19.02.fits', 'NGC3923_2018-05-12.72.fits', 'NGC3923_2018-04-24.57.fits', 'NGC3923_2018-05-04.77.fits', 'NGC3923_2018-05-31.47.fits', 'NGC3923_2018-05-22.01.fits', 'NGC3923_2018-05-03.25.fits', 'NGC3923_2018-05-29.67.fits', 'NGC3923_2018-05-16.71.fits', 'NGC3923_2018-04-28.75.fits', 'NGC3923_2018-04-27.07.fits', 'NGC3923_2018-04-05.13.fits', 'NGC3923_2018-05-12.04.fits', 'NGC3923_2018-06-09.16.fits', 'NGC3923_2018-05-06.06.fits', 'NGC3923_2018-04-07.14.fits']\n"
+     ]
+    }
+   ],
    "source": [
+    "print(imglist)\n",
     "hdu= fits.open(imglist[0])\n",
     "header = hdu[0].header\n",
     "#print(header)"
@@ -176,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "silver-salem",
    "metadata": {},
    "outputs": [
@@ -240,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "intended-dylan",
    "metadata": {},
    "outputs": [
@@ -258,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "relevant-fourth",
    "metadata": {},
    "outputs": [
@@ -282,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "helpful-security",
+   "id": "lined-nomination",
    "metadata": {},
    "outputs": [],
    "source": []
