small edits to tex file

--- a/notebook/notes/notes_2022.tex
+++ b/notebook/notes/notes_2022.tex
@@ -76,7 +76,8 @@ The shell typically uses \$ as the prompt, but may use a different symbol. In th
 
 The prompt is followed by a text cursor, a character that indicates the position where your typing will appear. The cursor is usually a flashing or solid block, but it can also be an underscore or a pipe. You may have seen it in a text editor program, for example.
 
-So let's try our first command, `ls' is short for listing. This command will list the contents of the current directory.
+So let's try our first command, `ls' is short for listing. This command will list the contents of the current directory.  Note that if you are using a Windows machine, some commands will be different.  You can translate between the linux commands below and Windows commands by looking at a website like this: \\
+{\bf https://www.geeksforgeeks.org/linux-vs-windows-commands/ } \\
 
 \begin{figure}[!]
 \includegraphics[scale=.6]{figures/ls.png}
@@ -104,7 +105,7 @@ See Exploring Other Directories for more details on the cd command.
 
 \begin{figure}[!]
 \includegraphics[scale=.6]{figures/cd.png}
-\caption{cd command}
+\caption{cd command (dir in Windows)}
 \end{figure}
 
 
@@ -136,7 +137,7 @@ If prompted, you should choose to:\\
 Once installed, check that you can run the "Anaconda Prompt".  \\
 From the prompt, run the command: \\
 
-\noindent conda --version\\
+\noindent conda --version  [there are two dashes]\\
 
 Video to install miniconda on Windows \\
 https://www.youtube.com/watch?v=tXgPY4lc6fo \\
