add solutions for 2022 lecture 2

--- a/notebook/2022/lecture2/Pima-lecture2.ipynb
+++ b/notebook/2022/lecture2/Pima-lecture2.ipynb
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n"
+    "# load the numpy package and give it the alias \"np\""
    ]
   },
   {
@@ -113,7 +113,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = np.array( # fill this in"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,7 +143,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y = np.array(\n",
+    "# fill this in\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's use NumPy to read a file.\n",
+    "Let's use NumPy to read a file. Look at the documentation for `np.loadtxt`.\n",
     "\n",
     "**Exercise:** <font color=blue>Read an ascii file of the solar spectrum using NumPy.</font>\n",
     "If you look at the file there are two columns lke this:\n",
@@ -203,10 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's split data in 2 arrays (one for wavelength and one for flux).  \n",
-    "``zip(xx,yy)`` is an awesome command to combine two arrays.  \n",
-    "``zip(*xxx)`` does the opposite of zip, splits data in 2 arrays.  \n",
-    "(..... I wish someone would have told me about ``zip`` when i started to learn python ....)"
+    "Now, let's split data in 2 arrays (one for wavelength and one for flux)."
    ]
   },
   {
@@ -220,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Matplotlib and magic functions\n",
+    "# Matplotlib\n",
     "Matplotlib is the most widely used scientific plotting package in Python. Import it by typing <font color='blue'>import matplotlib  </font> in your notebook. Use help to learn about the contents of a library module. You can import specific items from a library module to shorten programs. One can use <font color='blue'>from ... import ...   </font> to load only specific items from a library module. Then refer to them directly without\n",
     "library name as prefix.\n",
     "You can create an alias for a library module when importing it to shorten programs. One can use <font color='blue'>import ... as ...</font> to create an alias. Create alias plt for library module pyplot in your\n",
@@ -233,8 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pyplot is a nice interface to all that is matplotlib\n",
-    "import matplotlib.pyplot as plt"
+    "# import the pyplot submodule"
    ]
   },
   {
@@ -302,7 +304,7 @@
     "plt.plot(x, y)\n",
     "plt.plot(x, y, '--')\n",
     "plt.plot(x, y, linestyle=':')\n",
-    "plt.plot(x, y, linestyle=':', drawstyle ='steps')\n",
+    "plt.plot(x, y, drawstyle ='steps')\n",
     "# etc."
    ]
   },
